--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Shopping Website</title>
@@ -8,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Simple Shopping Website</h1>
+        
+        <h1> <shadow>Simple Shopping Website </shadow></h1>
         <nav>
             <a href="#products">Products</a>
             <a href="#cart">Cart (<span id="cart-count">0</span>)</a>
