--- a/index.html
+++ b/index.html
@@ -3,49 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Shopping Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Online Shop</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #35424a;
+            color: #ffffff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            margin: 10px 0;
+        }
+        nav a {
+            color: #ffffff;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+        }
+        .product {
+            background: #ffffff;
+            border: 1px solid #dddddd;
+            border-radius: 5px;
+            margin: 20px 0;
+            padding: 10px;
+            text-align: center;
+        }
+        .product img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .product h2 {
+            font-size: 1.5em;
+            color: #333;
+        }
+        .product p {
+            color: #777;
+        }
+        .product button {
+            background: #35424a;
+            color: #ffffff;
+            border: none;
+            padding: 10px 15px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .product button:hover {
+            background: #45a049;
+        }
+        footer {
+            background: #35424a;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Simple Shopping Website</h1>
-        <nav>
-            <a href="#products">Products</a>
-            <a href="#cart">Cart (<span id="cart-count">0</span>)</a>
-        </nav>
-    </header>
 
-    <main>
-        <section id="products">
-            <h2>Products</h2>
-            <div class="product">
-                <h3>Product 1</h3>
-                <p>$10.00</p>
-                <button onclick="addToCart('Product 1', 10)">Add to Cart</button>
-            </div>
-            <div class="product">
-                <h3>Product 2</h3>
-                <p>$20.00</p>
-                <button onclick="addToCart('Product 2', 20)">Add to Cart</button>
-            </div>
-            <div class="product">
-                <h3>Product 3</h3>
-                <p>$30.00</p>
-                <button onclick="addToCart('Product 3', 30)">Add to Cart</button>
-            </div>
-        </section>
+<header>
+    <h1>Online Shop</h1>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Products</a>
+        <a href="#">Contact</a>
+        <a href="#">Cart</a>
+    </nav>
+</header>
 
-        <section id="cart">
-            <h2>Shopping Cart</h2>
-            <ul id="cart-items"></ul>
-            <p>Total: $<span id="total-price">0.00</span></p>
-        </section>
-    </main>
+<div class="container">
+    <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 1">
+        <h2>Product 1</h2>
+        <p>Price: $19.99</p>
+        <button>Add to Cart</button>
+    </div>
+    <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 2">
+        <h2>Product 2</h2>
+        <p>Price: $29.99</p>
+        <button>Add to Cart</button>
+    </div>
+    <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 3">
+        <h2>Product 3</h2>
+        <p>Price: $39.99</p>
+        <button>Add to Cart</button>
+    </div>
+</div>
 
-    <footer>
-        <p>&copy; 2024 Simple Shopping Website</p>
-    </footer>
+<footer>
+    <p>&copy; 2024 Online Shop. All Rights Reserved.</p>
+</footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
